# dakota-technical-assessment

./: .env.example  .gitignore  README.md  docker-compose.yml  run.bat
api/: Dockerfile  README.md  main.py  models.py  pyproject.toml
database/: README.md
database/documentation/: er_diagram.md
database/init/: 01_schema.sql
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/models/: schema.yml
dbt/models/marts/: energy_market_summary.sql  fact_gasoline_prices.sql  price_driver_features.sql  schema.yml
dbt/models/staging/: schema.yml  stg_eia_prices.sql
dbt/tests/: unique_fact_gasoline_prices_key.sql  unique_stg_eia_prices_key.sql
docs/: architecture.md  decisions.md
ingestion/: Dockerfile  README.md  config.py  database_writer.py  eia_client.py  fastapi_client.py  ingest.py  pyproject.toml
orchestration/: Dockerfile  README.md  flows.py  pyproject.toml
orchestration/docs/: decisions.md
orchestration/scripts/: api_enrichment_only.py  generate_pdf_report.py  generate_reports.py
reports/: README.md
reports/output/: pipeline_health_report.md
tests/: README.md  smoke_test_checklist.md  system_test_cases.md
