# pyproject.toml for uv dependency management
[project]
name = "dakota-api"
version = "0.1.0"
description = "FastAPI service for generating synthetic energy market enrichment data"
authors = [{name = "Dakota Analytics"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "faker>=20.0.0",
    "numpy>=1.24.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"